# nba-public-api

./: .gitignore  pyproject.toml
nba_public_api/: dbt_project.yml
nba_public_api/api_specs/: nba-open-api.json  nba_api.json
nba_public_api/dlt_pipelines/: nba.py  players_ingestion.py
nba_public_api/ingestion/: nba.py  players.py  players_ingestion.py  players_regular_stats_by_season.py
nba_public_api/io/: config.py
nba_public_api/models/: schema_evolution.sql  simple_players.sql
nba_public_api/models/staging/: sources.yml  teams.sql
nba_public_api/processing/: transformers.py
tests/: test.py
