[tool.poetry]
name = "nba-public-api"
version = "0.1.0"
description = ""
authors = ["Marc Garnica Caparrós <marcgarnica13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
dlt = {extras = ["duckdb"], version = "^1.5.0"}
streamlit = "^1.41.1"
dbt-core = "^1.9.1"
dbt-duckdb = "^1.9.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
